fixed spacing in navigation on hover/active tab

--- a/Lugnuts.css
+++ b/Lugnuts.css
@@ -109,7 +109,7 @@ li {
         display: block;
         color: white;
         text-align: center;
-        padding: 14px 16px;
+        padding: 15px 16px;
         text-decoration: none;
     }
 
